internal class AnimationString
{
    internal static string isSelected = "isSelected";
    internal static string canMove = "canMove";
    internal static string jump = "jump";
    internal static string isMoving = "isMoving";
    internal static string isGrounded = "isGrounded";
    internal static string isOnWall = "isOnWall";
    internal static string yVelocity = "yVelocity";
    internal static string isClick = "isClick";
    internal static string isShowTime = "isShowTime";
}